// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cart.service;

import "google/api/annotations.proto";

option go_package = "github.com/panupakm/boutique-go/api/cart;cart";
option java_multiple_files = true;
option java_package = "api.cart";

// -----------------Cart service-----------------

service CartService {
    rpc AddItem(AddItemRequest) returns (Empty) {
		option (google.api.http) = {
			post: "/cart"
			body: "*"
		};
	}
    rpc GetCart(GetCartRequest) returns (Cart) {
		option (google.api.http) = {
			get: "/cart"
		};
	}
	
    rpc EmptyCart(EmptyCartRequest) returns (Empty) {
		option (google.api.http) = {
			delete: "/cart"
		};
	}
}

message CartItem {
    string product_id = 1;
    int32  quantity = 2;
}

message AddItemRequest {
    string user_id = 1;
    CartItem item = 2;
}

message EmptyCartRequest {
    string user_id = 1;
}

message GetCartRequest {
    string user_id = 1;
}

message Cart {
    string user_id = 1;
    repeated CartItem items = 2;
}

message Empty {}