syntax = "proto3";

package boutiqueshop;

import "google/api/annotations.proto";
import "shared/shared.proto";

option go_package = "github.com/panupakm/boutique-go/api/catalog;catalog";
option java_multiple_files = true;
option java_package = "api.catalog";

service Catalog {
	rpc ListProducts (ListProductsRequest) returns (ListProductsResponse) {
		option (google.api.http) = {
			get: "/catalog"
		};
	}

	rpc GetProduct (GetProductRequest) returns (Product) {
		option (google.api.http) = {
			get: "/product"
		};
	}

	rpc SearchProducts (SearchProductsRequest) returns (SearchProductsResponse) {
		option (google.api.http) = {
			get: "/products"						
		};
	}
}

message ListProductsResponse {
	repeated Product products = 1;
	string page_token = 2;
}
message ListProductsRequest {
	int32 page_size = 1;
	string page_token = 2;		
}

message GetProductRequest {
	string id = 1;
} 

message SearchProductsRequest {
	string query = 1;
	int32 page_size = 2;
	string page_token = 3;
}

message SearchProductsResponse {
	repeated Product results = 1;
}